# ChangeLog for app-crypt/mit-krb5
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 May 2009; Nathan Phillip Brink <ohnobinki@gentoo.org>
  +mit-krb5-1.6.3-r6.ebuild, +files/CVE-2009-0844+CVE-2009-0847.patch,
  +files/CVE-2009-0846.patch:
  Bumped ebuild parallel to Gentoo tree, dropped most KEYWORDS.

  04 May 2009; Nathan Phillip Brink <ohnobinki@gentoo.org>
  mit-krb5-1.6.3-r4.ebuild:
  removed untested KEYWORDS


  04 May 2009; Nathan Phillip Brink <ohnobinki@gentoo.org>
  -mit-krb5-1.6.2.ebuild:
  Removed old package.

