@@ -10,6 +10,6 @@ DIST krb5-1.6.3-signed.tar 11909120 RMD160 4f09e797d6e03c240353f3943875117a39c82
 DIST mit-krb5-1.6.3-patches-0.4r1.tar.bz2 5863 RMD160 1135281067a4b452a08887df9299a2f1322b34b9 SHA1 c31ea0cce528bc8c70e44a8e6d964ad1c84b375a SHA256 9523edeea365b14b98ab35e18e2cd24ce4cbc7d9ae16a0cfa309720ec61f0671
 DIST mit-krb5-1.6.3-patches-0.5.tar.bz2 5317 RMD160 423c728e6f399fb4605373495a36480147a35e8c SHA1 ec3327acc45ce29cfd4179adf23fbde52eefb774 SHA256 46538d6b59d6fd1756b9ed0f3002886578a90cf5366e2be1d6fd0ffffeea7d3e
 EBUILD mit-krb5-1.6.3-r4.ebuild 2856 RMD160 0dc8918025d76b5286b70ec1deeb7a1503fca6d2 SHA1 5266a3b90be11c98dff10600005aa0af33dd9bbd SHA256 b77792e6cae5295188ea38112eb4d170d5177ac616559a809342ad1014207087
-EBUILD mit-krb5-1.6.3-r6.ebuild 2954 RMD160 6967c1f94d4e44d0be17b433a1ffd23212a8cbac SHA1 77354b6bf67dbcacd4add52dc2d923fe54d124e2 SHA256 4d0333ae6e46f6a276a13403a83ce607a69443c74581dd9e12c4301fa877f32c
-MISC ChangeLog 571 RMD160 203460a8033b0d98f2078f689f2c0a523047935f SHA1 e98321de4a6aab520328daf932dd2806804094d6 SHA256 cbc40b330148a1833646f1d3fc0d98bd4bbff9b4b6d562a2930dfb8f5502e87b
-MISC metadata.xml 988 RMD160 b8d3c4b4be39d235ab984b110c269a404ed53803 SHA1 0c28bcb7be62e448fb2492c8ef13c49db1070484 SHA256 a9836086305633c73e4238912805c4acfb11fffd2d9d62305bb2139bffe63eef
+EBUILD mit-krb5-1.6.3-r6.ebuild 3112 RMD160 9b1fb2ba59846711e8e5149e30e32923a71532c1 SHA1 1fa06dc92bed8e72f507cdc39e6d6fda267fc984 SHA256 a304cbbde812b1576446c3c84caf767a117571684b56bbafe4d7b23bd2dd44d7
+MISC ChangeLog 764 RMD160 cdf0af7eb40fe2f1300eaea6321e71a46ed9927c SHA1 ad6e7823da09575db95cd9645689296892c3e427 SHA256 c26ddf967769f41a8db1a98530325d52e1f526b2847fa9055cc4ad95e8561a9b
+MISC metadata.xml 858 RMD160 f56079766274a7000a072853c26a9aaf82201af4 SHA1 9a0a21cd1612cc75fc823963d48a1f474aeab298 SHA256 a73a6d019df343c6eacf974423523eabc5e15850bc8addb6885857c7ab9d7305
